Issue #129: Fixing some spacing and styling issues, removing the old trace button and fixing boolean handling when parsing print statements

--- a/pcrs/resources/less/new-visualizer.less
+++ b/pcrs/resources/less/new-visualizer.less
@@ -54,8 +54,8 @@ hr {
 #std-out-textbox {
     overflow:auto;
     border: 1px solid black;
-    margin: 25px;
-    width: 93%;
+    margin: 25px 0px 25px 0px;
+    width: 100%;
     min-width: inherit;
     height: 8em;
     padding-left: 1em;
